<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white">

    <include
        android:id="@+id/status_bar"
        layout="@layout/view_status_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <FrameLayout
            android:id="@+id/fl_home_left"
            android:layout_width="?actionBarSize"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_10">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center"
                android:src="@drawable/home_nav" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="志愿填报助手"
            android:textColor="@color/color_text_title"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop" />


        <FrameLayout
            android:id="@+id/rl_zntb"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/dp_24"
            android:layout_marginBottom="@dimen/dp_24"
            android:background="@drawable/shape_home_edit">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/home_zntb"
                android:textColor="@color/color_home_icon_text"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_right_arrow"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/dp_24"
                />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_skx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_lqyc"
                android:drawablePadding="@dimen/dp_home_icon_padding"
                android:gravity="center_horizontal"
                android:text="@string/home_skx"
                android:textColor="@color/color_home_icon_text"
                android:textSize="@dimen/dp_home_icon_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_yfyd"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_yfyd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_yfyd"
                android:drawablePadding="@dimen/dp_home_icon_padding"
                android:gravity="center_horizontal"
                android:text="@string/home_yfyd"
                android:textColor="@color/color_home_icon_text"
                android:textSize="@dimen/dp_home_icon_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_skx"
                app:layout_constraintRight_toLeftOf="@id/tv_lqyc"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_lqyc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_tfqx"
                android:drawablePadding="@dimen/dp_home_icon_padding"
                android:gravity="center_horizontal"
                android:text="@string/home_lqyc"
                android:textColor="@color/color_home_icon_text"
                android:textSize="@dimen/dp_home_icon_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_yfyd"
                app:layout_constraintRight_toLeftOf="@id/tv_zycp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_zycp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_xgcs"
                android:drawablePadding="@dimen/dp_home_icon_padding"
                android:gravity="center_horizontal"
                android:text="@string/home_zycp"
                android:textColor="@color/color_home_icon_text"
                android:textSize="@dimen/dp_home_icon_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_lqyc"
                app:layout_constraintRight_toLeftOf="@id/tv_tbzn"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_tbzn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_home_tbzn"
                android:drawablePadding="@dimen/dp_home_icon_padding"
                android:gravity="center_horizontal"
                android:text="@string/home_tbzn"
                android:textColor="@color/color_home_icon_text"
                android:textSize="@dimen/dp_home_icon_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_zycp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>